# OS_Scheduler

./: CMakeCache.txt  CMakeLists.txt  Makefile  OS_MS2  README.md  cmake_install.cmake  main.c  memory.c  memory.h  os.c  os.h  pcb.c  pcb.h  test.txt  xyz.txt
schedulers/: fcfs.c  fcfs.h  mlfq.c  mlfq.h  queue.c  queue.h  round_robin.c  round_robin.h
ui/: dashboard.c  dashboard.h  log_and_console.c  log_and_console.h  memory_viewer.c  memory_viewer.h  process_creation_and_config.c  process_creation_and_config.h  resource_management.c  resource_management.h  scheduler_control.c  scheduler_control.h  visualization_execution.c  visualization_execution.h  visualized_execution.c  visualized_execution.h
